try to fix spacing issues caused by addition of disqus comments byt creating new foot class container-icons for the social links list

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 </div>
 
 					
-				<div id="footer">
+				<div id="footer" class="container-icons">
 					
 						<footer>
   <ul class="icons">
